Added desktop media queries

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
       <div class="info-buttons">
         <button class="back">Back this project</button> 
-        <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg"><g fill="none"   fill-rule="evenodd"><circle fill="#2F2F2F" cx="28" cy="28" r="28"/><path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z"/></g></svg>
+        <div class="bookmarks">
+          <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg"><g fill="none"   fill-rule="evenodd"><circle fill="#2F2F2F" cx="28" cy="28" r="28"/><path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z"/></g></svg>
+          <button class="bookmark">Bookmark</button>
+        </div>
       </div>
     </div>
 
@@ -48,12 +51,12 @@
         <span class="sub-number">of $100,000 backed</span>
       </div>
 
-      <div class="numbers">
+      <div class="numbers margin">
         <h2>5,007</h2>
         <span class="sub-number">total backers</span>
       </div>
 
-      <div class="numbers">
+      <div class="numbers margin last">
         <h2>56</h2>
         <span class="sub-number">days left</span>
       </div>
@@ -98,7 +101,7 @@
           <button class="reward-button">Select Reward</button>
         </div>
   
-        <div class="reward card">
+        <div class="reward card sold-out">
           <h4 class="reward-header">Mahogany Special Edition</h4>
           <span class="pledge">Pledge $200 or more</span>
           <p class="reward-description">
@@ -112,8 +115,6 @@
   
       </div>
     </div>
-    
-    
   </main>
   
 
