--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <div class="numbers-container card">
       <div class="numbers">
-        <h2 id="total-money">$89,914</h2>
+        <h2 id="total-money">0</h2>
         <span class="sub-number">of $100,000 backed</span>
       </div>
 
       <div class="numbers margin">
-        <h2 id="total-backers">5,007</h2>
+        <h2 id="total-backers">5007</h2>
         <span class="sub-number">total backers</span>
       </div>
 
@@ -66,7 +66,7 @@
         <span class="sub-number">days left</span>
       </div>
 
-      <progress class="progress-bar" value="0.89"></progress>
+      <progress class="progress-bar" value="0" max="100000"></progress>
     </div>
 
     <div class="about card">
@@ -144,8 +144,8 @@
           <div class="enter-pledge">
             <p class="pledge-text">Enter your pledge</p>
             <div class="buttons">
-              <input type="number">
-              <button class="continue-btn">Continue</button>
+              <input type="number" step="0.01" class="pledge-amount">
+              <button type="submit" class="continue-btn">Continue</button>
             </div>
           </div>
         </div>
@@ -161,8 +161,8 @@
           <div class="enter-pledge">
             <p class="pledge-text">Enter your pledge</p>
             <div class="buttons">
-              <input type="number">
-              <button class="continue-btn">Continue</button>
+              <input type="number" step="0.01" class="pledge-amount">
+              <button type="submit" class="continue-btn">Continue</button>
             </div>
           </div>
         </div>
@@ -178,8 +178,8 @@
           <div class="enter-pledge">
             <p class="pledge-text">Enter your pledge</p>
             <div class="buttons">
-              <input type="number">
-              <button class="continue-btn">Continue</button>
+              <input type="number" step="0.01" class="pledge-amount">
+              <button type="submit" class="continue-btn">Continue</button>
             </div>
           </div>
         </div>
@@ -195,16 +195,30 @@
           <div class="enter-pledge">
             <p class="pledge-text">Enter your pledge</p>
             <div class="buttons">
-              <input type="number">
-              <button class="continue-btn">Continue</button>
+              <input type="number" step="0.01" class="pledge-amount">
+              <button type="submit" class="continue-btn">Continue</button>
             </div>
           </div>
         </div>
-
       </div>
+    </div>
+  </div>
+
+  <!-- Success Message -->
+
+  <div class="main-container success">
+    <div class="success-card card">
+      <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#3CB3AB" cx="32" cy="32" r="32"/><path stroke="#FFF" stroke-width="5" d="M20 31.86L28.093 40 44 24"/></g></svg>
+      <h4>Thanks for your support!</h4>
+      <p>Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
+        an email once our campaign is completed.
+      </p>
+      <button class="success-btn">Got it!</button>
     </div>
 
   </div>
+
+  
   
 
   <!-- Selection modal start -->
